# poupool

./: .gitignore  .pre-commit-config.yaml  .project  .pydevproject  .travis.yml  README.md  backup_settings.py  config.ini  default_settings.py  logging-debug.conf  logging-file.conf  logging.conf  plan.md  poupool.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_compile.sh
.github/: dependabot.yml
.github/workflows/: poupool.yml
actuator/: pump.py  valve.py
arduino/cover/: cover.ino  cover.ino.standard.hex  cover.ino.with_bootloader.standard.hex  flash.sh
configuration/: settings.py
controller/: __init__.py  actor.py  arduino.py  config.py  device.py  disinfection.py  dispatcher.py  encoder.py  filtration.py  fsm.py  heating.py  lcd.py  light.py  mqtt.py  sensor.py  swim.py  system.py  tank.py  temperature.py  test.py  util.py
docs/: README.md
docs/_includes/: head-custom.html
mqtt/: mqtt.py
raspberrypi/: 50-arduino.rules  50-ezo-sensors.rules  50-lcd.rules  config.txt  poupool.service
raspberrypi/home_assistant/: mqtt.yaml
raspberrypi/openhab/configurations/: openhab.cfg
raspberrypi/openhab/configurations/items/: poupool.items
raspberrypi/openhab/configurations/persistence/: rrd4j.persist
raspberrypi/openhab/configurations/rules/: poupool.rules
raspberrypi/openhab/configurations/sitemaps/: default.sitemap  poupool.sitemap
raspberrypi/openhab/configurations/things/: poupool.things
raspberrypi/openhab/configurations/transform/: divide3600.js  multiply3600.js  state.map
sensor/: pressure.py
test/: test_actor.py  test_device.py  test_disinfection.py  test_encoder.py  test_filtration.py  test_lcd.py  test_sensor.py  test_swim.py  test_util.py
tests/: test_filtration.py
