[project]
name = "poupool"
version = "0.1.0"
description = "Poupool is a swimming pool control software"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt==2.1.0",
    "pykka==4.2.0",
    "pyserial==3.5",
    "transitions==0.9.2",
    "astral==3.2",
    "rpi-gpio==0.7.1",
    "adafruit-circuitpython-ads1x15==2.4.2",
    "adafruit-circuitpython-mcp4725==1.4.16",
    "lcdbackpack==1.0.0b1",
]

[dependency-groups]
dev = [
    "pre-commit==4.2.0",
    "ruff==0.11.3",
    "codecov==2.1.13",
    "pytest==8.3.5",
    "pytest-cov==6.1.0",
    "pytest-mock==3.14.0",
    "freezegun==1.5.1",
]

[tool.ruff]
target-version = "py311"
line-length = 120
lint.select = [
    "C4",  # comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "RUF", # ruff specific
    "UP",  # pyupgrade
    "W",   # pydocstyle warning
    "PT",  # pytest
    "SLF", # self access
    "SIM", # simplify
    "A",   # builtins
    "B",   # bugbear
    "RET", # return
    "RSE", # raise
]
