[project]
name = "poupool"
version = "0.1.0"
description = "Poupool is a swimming pool control software"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt==2.1.0",
    "pykka==4.4.2",
    "pyserial==3.5",
    "transitions==0.9.3",
    "astral==3.2",
    "rpi-gpio==0.7.1",
    "adafruit-circuitpython-ads1x15==3.0.5",
    "adafruit-circuitpython-mcp4725==1.4.21",
    "lcdbackpack==1.0.0b1",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "ruff==0.15.22",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "freezegun==1.5.5",
]

[tool.ruff]
target-version = "py311"
line-length = 120
lint.select = [
    "C4",  # comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "RUF", # ruff specific
    "UP",  # pyupgrade
    "W",   # pydocstyle warning
    "PT",  # pytest
    "SLF", # self access
    "SIM", # simplify
    "A",   # builtins
    "B",   # bugbear
    "RET", # return
    "RSE", # raise
]
